<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayBackground"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SignIn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">


        <ImageView

            android:id="@+id/inimage"
            android:layout_width="223dp"
            android:layout_height="194dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            app:srcCompat="@drawable/ichat_icon" />


        <EditText
            android:id="@+id/inemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="15dp"/>

        <EditText
            android:id="@+id/inpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="15dp"/>

        <TextView
            android:id="@+id/clickForSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right"
            android:padding="3dp"
            android:text="@string/click_for_signup" />

        <Button
            android:id="@+id/signinbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/sign_in"
            app:cornerRadius="20dp"
            tools:text="Sign In" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="23dp">

            <Button
                android:id="@+id/ingoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/ic_google_icon"
                android:padding="13dp"
                android:text="@string/google"
                android:textColor="@color/black"
                app:cornerRadius="20dp"
                android:layout_marginEnd="4dp" />

            <Button
                android:id="@+id/infacebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:backgroundTint="@color/fb_color"
                android:drawableLeft="@drawable/ic_fb_icon"
                android:padding="13dp"
                android:text="@string/facebook"
                android:textColor="@color/white"
                app:cornerRadius="20dp"
                android:layout_marginStart="4dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/inphone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_with_phone"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="15dp"/>
    </LinearLayout>
</LinearLayout>